<resources>
    <string name="app_name">END UI Prototype</string>
    <string name="search">Search</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="latest">Latest</string>
    <string name="brands">Brands</string>
    <string name="clothing">Clothing</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="drawer">Navigation Drawer</string>
    <string name="pick_page">Tap to open a page</string>
    <string name="company_name">COMPANY X</string>
    <string name="info_header_title">NEW THIS WEEK</string>
    <string name="info_header_filter">FILTER</string>
    <string name="info_header_sort">SORT</string>
    <string name="fragment_placeholder_text">New fragment created</string>
</resources>
