<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1" android:checkableBehavior="single" >
    <item
        android:id="@+id/latest"
        android:icon="@drawable/ic_action_latest"
        android:title="@string/latest" />

    <item
        android:id="@+id/brands"
        android:icon="@drawable/ic_action_brands"
        android:title="@string/brands" />

    <item
        android:id="@+id/clothing"
        android:icon="@drawable/ic_action_clothing"
        android:title="@string/clothing" />
    </group>

    <group android:id="@+id/group2" android:checkableBehavior="single" >
    <item
        android:id="@+id/login"
        android:icon="@drawable/ic_action_login"
        android:title="@string/login" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_action_logout"
        android:title="@string/logout" />
    </group>

</menu>
